basic-alicesmith.bicep
param location string = resourceGroup().location
param subscriptionId string = subscription().subscriptionId
param resourcegroup string = resourceGroup().name

param adminUsername string = 'azureuser'
param vnet_name string = 'vnet-alicesmith'
param vnic_name string = 'vnic-alicesmith'
param nsg_name string = 'nsg-alicesmith'
param pip_name string = 'pip-alicesmith'
param vm_name string = 'vm-alicesmith'
param osdisk_name string = 'osdisk-alicesmith'

//for the vnet
resource vnetalicesmith 'Microsoft.Network/virtualNetworks@2023-02-01' = {
  name: vnet_name
  location: location
  tags: {}
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.0.0.0/16'
      ]
    }
    subnets: [
      {
        name: 'default'
        //id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Network/virtualNetworks/vnet-alicesmith/subnets/default'
        properties: {
          addressPrefix: '10.0.0.0/24'
          delegations: []
          privateEndpointNetworkPolicies: 'Disabled'
          privateLinkServiceNetworkPolicies: 'Enabled'
        }
        type: 'Microsoft.Network/virtualNetworks/subnets'

      }
    ]
    virtualNetworkPeerings: []
    enableDdosProtection: false
  }
  dependsOn: [ nsgalicesmith ]
}

// for the vnic

resource vnicalicesmith 'Microsoft.Network/networkInterfaces@2023-02-01' = {
  name: vnic_name
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfig1'
        id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Network/networkInterfaces/vnic-alicesmith/ipConfigurations/ipconfig1'
        type: 'Microsoft.Network/networkInterfaces/ipConfigurations'
        properties: {
          privateIPAddress: '10.0.0.4'
          privateIPAllocationMethod: 'Dynamic'
          publicIPAddress: {
            id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Network/publicIPAddresses/pip-alicesmith'
            properties: {
              publicIPAddressVersion: 'IPv4'
              publicIPAllocationMethod: 'Dynamic'
              idleTimeoutInMinutes: 4
              ipTags: []
              deleteOption: 'Delete'
            }
            sku: {
              name: 'Basic'
              tier: 'Regional'
            }
          }
          subnet: {
            id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Network/virtualNetworks/vnet-alicesmith/subnets/default'
          }
          primary: true
          privateIPAddressVersion: 'IPv4'
        }
      }
    ]
    dnsSettings: {
      dnsServers: []
    }
    enableAcceleratedNetworking: true
    enableIPForwarding: false
    disableTcpStateTracking: false
    networkSecurityGroup: {
      id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Network/networkSecurityGroups/nsg-alicesmith'
    }
    nicType: 'Standard'
    //allowPort25Out: false
    //nicAuxiliarySkuBillingNotificationType: 'NoOp'
  }
  location: location
  dependsOn: [ vnetalicesmith ]
}

// for the nsg
resource nsgalicesmith 'Microsoft.Network/networkSecurityGroups@2023-02-01' = {
  name: nsg_name
  location: location
  tags: {}
  properties: {
    securityRules: [
      {
        name: 'SSH'
        type: 'Microsoft.Network/networkSecurityGroups/securityRules'
        properties: {
          priority: 1010
          protocol: '*'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '22'
        }
      }
      {
        name: 'HTTP'
        type: 'Microsoft.Network/networkSecurityGroups/securityRules'
        properties: {
          protocol: 'TCP'
          sourcePortRange: '*'
          destinationPortRange: '80'
          sourceAddressPrefix: '*'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 1020
          direction: 'Inbound'
          sourcePortRanges: []
          destinationPortRanges: []
          sourceAddressPrefixes: []
          destinationAddressPrefixes: []
        }
      }

    ]
  }
}

// for the pip
resource pipalicesmith 'Microsoft.Network/publicIPAddresses@2023-02-01' = {
  name: pip_name
  location: location
  tags: {}
  zones: [
    '3'
    '1'
    '2'
  ]
  properties: {
    publicIPAddressVersion: 'IPv4'
    publicIPAllocationMethod: 'Static'
    idleTimeoutInMinutes: 4
    ipTags: []
    dnsSettings: {
      domainNameLabel: pip_name
    }
  }
  sku: {
    name: 'Standard'
    tier: 'Regional'
  }
}

// last for the vm
resource vmalicesmith 'Microsoft.Compute/virtualMachines@2023-03-01' = {
  name: vm_name
  location: location
  plan: {
    name: 'xr-server-v03'
    publisher: 'asdivertissementinc1617837708654'
    product: 'playfab_xr'
  }
  identity: {
    type: 'SystemAssigned'
  }
  properties: {
    hardwareProfile: {
      vmSize: 'Standard_D2s_v3'
    }
    storageProfile: {
      imageReference: {
        publisher: 'asdivertissementinc1617837708654'
        offer: 'playfab_xr'
        sku: 'xr-server-v03'
        version: 'latest'
      }
      osDisk: {
        osType: 'Linux'
        name: osdisk_name
        createOption: 'FromImage'
        caching: 'ReadWrite'
        managedDisk: {
          storageAccountType: 'Premium_LRS'
          //id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Compute/disks/osdisk-alicesmith'
        }
        deleteOption: 'Delete'
        diskSizeGB: 30
      }
      dataDisks: []
      diskControllerType: 'SCSI'
    }
    osProfile: {
      computerName: 'vm-alicesmith'
      adminUsername: adminUsername
      linuxConfiguration: {
        disablePasswordAuthentication: true
        ssh: {
          publicKeys: [
            {
              path: '/home/azureuser/.ssh/authorized_keys'
              keyData: 'ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDBhy/C9OvQsPDcuN2T/p2mGP1aQm9qCIOOe/tRFaF+PTn6GrqL94QIzUgIrfiuMU/NcfXzC5JrEFJtHod5PUwF1ksxZJu9kFGXPyCPGw/LgUjaWfgP3iZKDBIH0xaNYfpkwynWi8ZQElgQz1oFCsC8fY9cOwsfXxWbtuoFRn9ZeNERrDyqMjRQqsDQ7B1GNzDEVIrYVR2/cEuzyCvXI3L8kbyl8KrG8S+RKBMcJ1qTMSq5r30H8qPf1J/rokeEilwmxoJx80AXre99Bji4K8bY50JaxjdWuYIB5j+Y41DLPyJdBGic58qhkwoXAE4ElE1IxTV2Kao4KBCloluBD2FVrl9pEN315/FQZPFIpgRY8RlZggoeH0CqO4Asvb2+hLk0UC5Nfk/JRuugn2NOBXAPby+ObBPSOQEj0p28gqfB3MU/mb3gLt16 [...]
            }
          ]
        }
        provisionVMAgent: true
        patchSettings: {
          patchMode: 'ImageDefault'
          assessmentMode: 'ImageDefault'
        }
        enableVMAgentPlatformUpdates: false
      }
      secrets: []
      allowExtensionOperations: true
      //requireGuestProvisionSignal: true
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: '/subscriptions/${subscriptionId}/resourceGroups/${resourcegroup}/providers/Microsoft.Network/networkInterfaces/${vnic_name}'
          properties: {
            deleteOption: 'Delete'
          }
        }
      ]
    }
  }
  zones: [
    '1'
  ]
  dependsOn: [ vnicalicesmith, vnetalicesmith, pipalicesmith, nsgalicesmith ]
}
